04-deploy-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: myapp
             port:
               number: 8080
